# mahjong

./: .gitignore  .travis.yml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  LICENSE  Mahjong.sln  README.md  changelog.html  core  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  quickstart.html  search.html  searchindex.js  setup.py  读我.md
.github/workflows/: build-and-test.yml  build-wheels.yml  cmake.yml  docs.yml  msvc.yml
AI/: AI_PER.py  AI_PER_Play.ipynb  Frost2_Play.ipynb  Frost2_Play.py  Frost2_Play_GPU.ipynb  Frost2_Play_Test.ipynb  Frost2_Random_Ron.ipynb  Frost2_Random_Ron0.ipynb  FrostVer2.pptx  MahjongPy.pyd  aiFrost2.py  ai_test.py  buffer.py  bug.py  data_adapter.py  encode_test.py  env_test.py  naiveAI.py  test.ipynb  test.py  wrapper.py
AI/.ipynb_checkpoints/: buffer-checkpoint.py
AI/test/: Frost2_Play.ipynb  Frost2_Play_CPU_Q0.ipynb  Frost2_Play_Q0.ipynb  Frost2_Random_Ron.ipynb  Frost2_Random_Test.ipynb  aa.py  bug.py  env_test.py  naiveAI.py  response_bug.ipynb
Mahjong/: Action.cpp  Action.h  Agent.cpp  Agent.h  CMakeLists.txt  GameLog.cpp  GameLog.h  GamePlay.cpp  GamePlay.h  GameResult.cpp  GameResult.h  Mahjong.vcxproj  Player.cpp  Player.h  Profiler.cpp  Profiler.h  RoundToWin.cpp  RoundToWin.h  Rule.cpp  Rule.h  ScoreCounter.cpp  ScoreCounter.h  Table.cpp  Table.h  TableStatus.cpp  TableStatus.h  Tile.h  Yaku.h  macro.h  mahjong.h  main.cpp  majhong.cpp
Mahjong/Encoding/: TrainingDataEncoding.cpp  TrainingDataEncoding.h  TrainingDataEncodingV1.cpp  TrainingDataEncodingV1.h  TrainingDataEncodingV2.cpp  TrainingDataEncodingV2.h
Mahjong2/: Mahjong2.vcxproj  Rule.cpp  Rule.h  Table.cpp  Table.h  Tile.h  Yaku.cpp  Yaku.h  macro.h  main.cpp  七对.cpp  七对.h
MahjongAlgorithm/: CMakeLists.txt  Constant.cpp  Constant.h  Tile.cpp  Tile.h  TileGroup.h  Yaku.cpp  Yaku.h
MahjongPy/: CMakeLists.txt  EncodingPy.cpp  EncodingPy.h  MahjongPy.cpp  TrainingDataEncoding.cpp  TrainingDataEncoding.h
MahjongPyWrapper/: CMakeLists.txt  EncodingPy.cpp  EncodingPy.h  MahjongPy.cpp
Pybinder/: CMakeLists.txt  EncodingPy.cpp  EncodingPy.h  MahjongPy.cpp
ShanTin/: CMakeLists.txt  shantin.cpp  shantin.h
ShanTinTest/: CMakeLists.txt  main.cpp
_sources/advanced/: index.md.txt
_sources/examples/: basic_usage.md.txt  rl_training.md.txt
advanced/: cpp_engine.html  custom_agents.html  index.html  paipu_replay.html
api/: action.html  environment.html  index.html  observation.html  utilities.html
docs/: changelog.md  conf.py  index.md  installation.md  quickstart.md
docs/advanced/: cpp_engine.md  custom_agents.md  paipu_replay.md
docs/api/: action.md  environment.md  index.md  observation.md  utilities.md
docs/examples/: index.md
examples/: basic_usage.html  index.html  rl_training.html
paipuxmls/: 2020010100gm-00a9-0000-03aa14b0.txt  2020010100gm-00a9-0000-0b366d75.txt  2020010100gm-00a9-0000-0fc130ac.txt  2020010100gm-00a9-0000-16ce9106.txt  2020010100gm-00a9-0000-1ce89ac5.txt  2020010100gm-00a9-0000-2ea5de40.txt  2020010100gm-00a9-0000-41ec0486.txt  2020010100gm-00a9-0000-45ea0ff1.txt  2020010100gm-00a9-0000-53a5db14.txt  2020010100gm-00a9-0000-577ebf19.txt  2020010100gm-00a9-0000-5a5e9fcc.txt  2020010100gm-00a9-0000-66ab2d00.txt  2020010100gm-00a9-0000-791430a7.txt  2020010100gm-00a9-0000-9bfbb1ce.txt  2020010100gm-00a9-0000-9fba9fe8.txt  2020010100gm-00a9-0000-a1f76e98.txt  2020010100gm-00a9-0000-a31524e9.txt  2020010100gm-00a9-0000-a67d91f3.txt  2020010100gm-00a9-0000-aa46fc4d.txt  2020010100gm-00a9-0000-b558d3e0.txt  2020010100gm-00a9-0000-b80cb112.txt  2020010100gm-00a9-0000-bd4f68bf.txt  2020010100gm-00a9-0000-bf79ddd3.txt  2020010100gm-00a9-0000-c2a933e3.txt  2020010100gm-00a9-0000-c5edd88e.txt  2020010100gm-00a9-0000-cfa2fd64.txt  2020010100gm-00a9-0000-e21629c7.txt  2020010100gm-00a9-0000-e2721256.txt  2020010100gm-00a9-0000-e9eeddab.txt  2020010100gm-00a9-0000-feebf9a4.txt  2020010100gm-00b9-0000-18a1410f.txt  2020010100gm-00b9-0000-2eca4cd0.txt  2020010100gm-00b9-0000-314e6580.txt  2020010100gm-00b9-0000-7a6863a8.txt  2020010100gm-00b9-0000-89853ee1.txt  2020010100gm-00b9-0000-8caf7594.txt  2020010100gm-00b9-0000-92a28dbf.txt  2020010100gm-00b9-0000-92cdab02.txt  2020010100gm-00b9-0000-983b55a1.txt  2020010100gm-00b9-0000-a0963143.txt  (+960 more)
pymahjong/: README.md  __init__.py  base_modules.py  env_mahjong.py  env_mahjong_example.py  env_pymahjong.py  env_test.py  models.py  paipu_jiexi.py  tenhou_paipu_check.py  test.py
pymahjong/test/: __init__.py  base_modules.py  env_mahjong.py  env_pymahjong.py  env_test.py  models.py  pretrained_agents_play_with_each_other.py  single_agent_test.py  single_agent_wrapper.py  test.py  testV2.ipynb
pywrapper/: CMakeLists.txt  MahjongPy.cpp
test/: CMakeLists.txt  main.cpp
和牌判断器/: Constant.h  Tile.h  TileGroup.cpp  TileGroup.h  Yaku.cpp  和牌判断器.vcxproj
