cmake_minimum_required(VERSION 3.1)
project(MahjongAlgorithm)
file(GLOB_RECURSE MahjongAlgorithm_SRC_H ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
file(GLOB_RECURSE MahjongAlgorithm_SRC_CPP ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
add_library(${PROJECT_NAME} STATIC ${MahjongAlgorithm_SRC_H} ${MahjongAlgorithm_SRC_CPP})
